--- a/index.html
+++ b/index.html
@@ -4,61 +4,76 @@
         <meta charset="utf-8" />
         <meta name="description" content="Efective solutions for your business" />
         <title>WebStudio</title>
-        <link rel="stylesheet" href="css/styles.css"/>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <nav>
-            <ul>
-                <img src="img/logo.jpg" alt="WebStudio logo">
-                <li><a href="studio.html">Studio</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contacts.html">Contacts</a></li>
-            </ul>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        </nav>
+        <header>
+            <section class="top-line">
+                <nav>
+                    <img src="img/logo.jpg" alt="WebStudio logo">
+                    <ul>
+                        <li><a href="studio.html">Studio</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contacts.html">Contacts</a></li>
+                    </ul>
+                    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                </nav>
+            </section>
 
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button>Order Service</button>
-            <br>
-            <img src="img/background.jpg" alt="Navy-blue background" width="1440" height="600">
-        </section>
+            <section class="hero-image">
+                <h1>Effective Solutions for Your Business</h1>
+                <button>Order Service</button>
+            </section>
+        </header>
 
         <main>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            <section class="section-1">
+                <h3>Strategy</h3>
+                <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                <h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </section>
+
+            <section class="section-2">
+                <h2>What Are We Doing</h2>
+                <ul>
+                    <li><img src="img/monitor.jpg" alt="Graphs on a monitor"></li>
+                    <li><img src="img/interfaces.jpg" alt="User interfaces on a smartphone"></li>
+                    <li><img src="img/phone-laptop.jpg" alt="A phone held in front of a laptop"></li>
+                </ul>
+            </section>
+    
+            <section class="section-3">
+                <h2>Our Team</h2>
+                <ul>
+                    <li><img src="img/TeamCard1.jpg" alt="Picture of product designer">
+                    <h3>Mark Guerrero</h3>
+                    <p>Product Designer</p>
+                    </li>
+                    <li><img src="img/TeamCard2.jpg" alt="Picture of frontend developer">
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
+                    </li>
+                    <li><img src="img/TeamCard3.jpg" alt="Picture of marketer">
+                    <h3>Camila Garcia</h3>
+                    <p>Marketing</p>
+                    </li>
+                    <li><img src="img/TeamCard4.jpg" alt="Picture of UI designer">
+                    <h3>Daniel Wilson</h3>
+                    <p>UI Designer</p>
+                    </li>
+                </ul>
+            </section>
         </main>
-
-        <section>
-            <h2>What Are We Doing</h2>
-            <img src="img/monitor.jpg" alt="Graphs on a monitor">
-            <img src="img/interfaces.jpg" alt="User interfaces on a smartphone">
-            <img src="img/phone-laptop.jpg" alt="A phone held in front of a laptop">
-        </section>
-
-        <section>
-            <h2>Our Team</h2>
-            <img src="img/TeamCard1.jpg" alt="Picture of product designer">
-            <img src="img/TeamCard2.jpg" alt="Picture of frontend developer">
-            <img src="img/TeamCard3.jpg" alt="Picture of marketer">
-            <img src="img/TeamCard4.jpg" alt="Picture of UI designer">
-        </section>
      
         <footer>
             <img src="img/logo.jpg" alt="WebStudio logo">
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            <img src="img/background.jpg" alt="Navy-blue background" width="1440" height="312">
         </footer>
 
     </body>
