--- a/portfolio.html
+++ b/portfolio.html
@@ -33,18 +33,18 @@
 
         <section class="filters">
             <ul>
-                <li><button class="all">All</button></li>
-                <li><button>Web Site</button></li>
-                <li><button>App</button></li>
-                <li><button>Design</button></li>
-                <li><button>Marketing</button></li>
+                <li><button class="all" type="button">All</button></li>
+                <li><button class="website" type="button">Web Site</button></li>
+                <li><button class="app" type="button">App</button></li>
+                <li><button class="design" type="button">Design</button></li>
+                <li><button class="marketing" type="button">Marketing</button></li>
             </ul>
         </section>
 
-        <section class="row-1">
+        <section>
             <article class="card1">
                 <header><img src="img/card1.jpg" alt="App Interfaces"></header>
-                <h3>Banking App Interface Concept</h3>
+                <p>Banking App Interface Concept</p>
                 <footer>
                     <span>App</span>
                 </footer>
@@ -52,7 +52,7 @@
 
             <article class="card2">
                 <header><img src="img/card2.jpg" alt="Phone Payment"></header>
-                <h3>Cashless Payment</h3>
+                <p>Cashless Payment</p>
                 <footer>
                     <span>Marketing</span>
                 </footer>
@@ -60,59 +60,57 @@
 
             <article class="card3">
                 <header><img src="img/card3.jpg" alt="Lapton and smartphone"></header>
-                <h3>Meditation App</h3>
+                <p>Meditation App</p>
                 <footer>
                     <span>App</span>
                 </footer>
             </article>
         </section>
 
-        <section class="row-2">
+        <section>
             <article class="card1.1">
                 <header><img src="img/card1.1.jpg" alt="Car driving dash"></header>
-                <h3>Taxi Service</h3>
+                <p>Taxi Service</p>
                 <footer>
                     <span>Marketing</span>
                 </footer>
             </article>
 
-            <article class="card2">
+            <article class="card2.1">
                 <header><img src="img/card2.1.jpg" alt="Screen ilustrations"></header>
-                <h3>Screen Ilustrations</h3>
+                <p>Screen Ilustrations</p>
                 <footer>
                     <span>Design</span>
                 </footer>
             </article>
 
-            <article class="card3">
+            <article class="card3.1">
                 <header><img src="img/card3.1.jpg" alt="Lady in orange outfit"></header>
-                <h3>Online Courses</h3>
+                <p>Online Courses</p>
                 <footer>
                     <span>Marketing</span>
                 </footer>
             </article>
-        </section>
-
-        <section class="row-2">
+        
             <article class="card1.2">
                 <header><img src="img/card1.2.jpg" alt="Instagram stories Concept"></header>
-                <h3>Instagram Stories Concept</h3>
+                <p>Instagram Stories Concept</p>
                 <footer>
                     <span>Design</span>
                 </footer>
             </article>
 
-            <article class="card2">
+            <article class="card2.2">
                 <header><img src="img/card2.2.jpg" alt="Organic Food"></header>
-                <h3>Organic Food</h3>
+                <p>Organic Food</p>
                 <footer>
                     <span>Web Site</span>
                 </footer>
             </article>
 
-            <article class="card3">
+            <article class="card3.2">
                 <header><img src="img/card3.2.jpg" alt="Fresh Coffee"></header>
-                <h3>Fresh Coffee</h3>
+                <p>Fresh Coffee</p>
                 <footer>
                     <span>Web Site</span>
                 </footer>
@@ -122,7 +120,6 @@
         <footer class="footer">
             <img src="img/logo.jpg" alt="WebStudio logo">
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            <img src="img/background.jpg" alt="Navy-blue background" width="1440" height="312">
         </footer>
     </body>
     
